add logic and add classes management with babel

--- a/src/main.scss
+++ b/src/main.scss
@@ -25,6 +25,11 @@
     padding: 20px;
 }
 
+.calculator-detail-content {
+    text-align: right;
+    padding-right: 20px;
+}
+
 .calculator-keyboard {
     width: 350px;
     margin: 30px auto;
